--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "php": ">=8.1",
         "ext-ctype": "*",
+        "ext-curl": "*",
         "ext-iconv": "*",
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.7",
@@ -41,9 +42,9 @@
         "symfony/validator": "6.1.*",
         "symfony/web-link": "6.1.*",
         "symfony/yaml": "6.1.*",
+        "symfonycasts/verify-email-bundle": "^1.11",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0",
-        "ext-curl": "*"
+        "twig/twig": "^2.12|^3.0"
     },
     "config": {
         "allow-plugins": {
@@ -87,6 +88,15 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "watch-tailwind": [
+            "npx tailwindcss -i ./src/Resouces/app.css -o ./public/app.css --watch"
+        ],
+        "dev-tailwind": [
+            "npx tailwindcss -i ./src/Resouces/app.css -o ./public/app.css"
+        ],
+        "prod-tailwind": [
+            "npx tailwindcss -i ./src/Resouces/app.css -o ./public/app.css --minify"
         ]
     },
     "conflict": {
