Overzicht Images en Containers

--- a/bundles/DockerBundle/src/Resources/config/services.yaml
+++ b/bundles/DockerBundle/src/Resources/config/services.yaml
@@ -9,3 +9,6 @@ services:
   DeLaParra\DockerBundle\Services\ImageService:
     arguments:
       - '@docker.connect'
+  DeLaParra\DockerBundle\Services\ContainerService:
+    arguments:
+      - '@docker.connect'
